--- a/src/assets/scss/pages/_ecommerce.scss
+++ b/src/assets/scss/pages/_ecommerce.scss
@@ -1,5 +1,5 @@
 /**=====================
-    33.  Ecommerce  CSS Start
+    33.  ecommerce  CSS Start
 ==========================**/
 
 /**====== Product Start ======**/
@@ -696,5 +696,5 @@
 }
 
 /**=====================
-    33. Ecommerce  CSS End
+    33. ecommerce  CSS End
 ==========================**/
